<?xml version="1.0"?>
<package format="3">
  <name>camera_2d_lidar_calibration</name>
  <version>1.0.0</version>
  <description>The camera_2d_lidar_calibration package</description>
  <maintainer email="ehong@ntu.edu.sg">ehong-tl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>pyquaternion</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>yaml</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
